@@ -5,8 +5,6 @@
   "type": "string",
   "enum": [
     "female",
-    "male",
-    "other",
-    "unknown"
+    "male"
   ]
 }
